--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,20 +1,22 @@
 <section id="app-navbar">
   <nav class="navbar navbar-expand-lg navbar-dark primary-color">
-    <a class="navbar-brand" href="#"><img class="diary" loading="lazy" src="{{constants.images.diary}}"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    
+    <a class="navbar-brand" href="#">
+      <img class="diary" loading="lazy" src="{{constants.images.diary}}">
+    </a>
+    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Add Note <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">History</a>
+        <li *ngFor="let link of links" class="nav-item">
+          <a class="nav-link" [routerLink]="[link.link]" routerLinkActive="{{link.activeClass}}">{{link.label}} <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
+    
   </nav>
 </section>
 
