--- a/src/app/modules/diary/components/note/note.component.html
+++ b/src/app/modules/diary/components/note/note.component.html
@@ -1,26 +1,36 @@
 <div class="container pt-5">
   <div class="row justify-content-center">
     <div class="col-md-7 col-sm-10">
-      <form class="text-center border border-light p-5" [formGroup]="noteForm">
+      <form class="border border-light p-5" [formGroup]="noteForm">
     
-        <p class="h4 mb-4">Add New Note</p>
+        <p class="h4 mb-4 text-center">Add New Note</p>
     
         <!-- Note -->
-        <input id="defaultLoginFormEmail" formControlName="note" class="form-control mb-4" placeholder="Note">
+        <div class="mb-3">
+          <input class="form-control" appFormControlValidationMsg validationMsgId="note" formControlName="note" placeholder="Note">
+        </div>
+        
   
         <!-- Picture -->
-        <input class="form-control mb-4" formControlName="picture" placeholder="Picture Link">
+        <div class="mb-3">
+          <input class="form-control" appFormControlValidationMsg validationMsgId="picture" formControlName="picture" placeholder="Picture Link">
+        </div>
+        
   
         <!-- Video -->
-        <input  class="form-control mb-4" formControlName="video" placeholder="Video Link">
-  
-        <input class="form-control mb-4" formControlName="date" type="date" id="birthday" name="birthday">
+        <div class="mb-3">
+          <input  class="form-control" appFormControlValidationMsg validationMsgId="video" formControlName="video" placeholder="Video Link">
+        </div>
+        
+        <div class="mb-3">
+          <input class="form-control" appFormControlValidationMsg validationMsgId="date" formControlName="date" type="date">
+        </div>
         
     
         <!-- Sign in button -->
-        <button mdbBtn color="info" (click)="addNote()" class="my-4" type="submit" >Add</button>
-  
-        <button mdbBtn color="info" (click)="getNotes()" class="my-4" type="submit" >Get</button>
+        <div class="text-center">
+          <button mdbBtn color="info" appFormSubmitValidationMsg [validationControl]="noteForm" (click)="addNote()" class="my-4 mx-auto" type="submit" >Add</button>
+        </div>
   
       </form>
     </div>
