Added history component logic

--- a/src/app/modules/diary/components/note/note.component.html
+++ b/src/app/modules/diary/components/note/note.component.html
@@ -1,8 +1,9 @@
 <div class="container pt-5">
   <div class="row justify-content-center">
     <div class="col-md-7 col-sm-10">
+      
+      <!--Note form starts-->
       <form class="border border-light p-5" [formGroup]="noteForm">
-    
         <p class="h4 mb-4 text-center">Add New Note</p>
     
         <!-- Note -->
@@ -27,12 +28,14 @@
         </div>
         
     
-        <!-- Sign in button -->
+        <!-- Add note button -->
         <div class="text-center">
           <button mdbBtn color="info" appFormSubmitValidationMsg [validationControl]="noteForm" (click)="addNote()" class="my-4 mx-auto" type="submit" >Add</button>
         </div>
   
       </form>
+    <!-- Note form ends-->
+    
     </div>
     
   </div>
